@@ -4,6 +4,8 @@ CHANGES IN FLTK 1.1.8
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
 	  STR #1639, STR #1645, STR #1644, STR #1792, STR #1793,
 	  STR #1742, STR #1777)
+	- Fl_Browser::hide() and Fl_Browser::show() did not
+	  correctly update the scrollbar (STR #1724)
 	- The configure script now shows a summry of the
 	  configuration results (STR #1810)
 	- "fltk-config --use-* --libs" did not list all of the
